# mcp-local-project-memory

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
src/local_project_memory/: __init__.py  __main__.py  config.py  server.py
src/local_project_memory/tools/: __init__.py
tests/: __init__.py  conftest.py  test_tools.py
