[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-project-memory"
version = "0.1.0"
description = "MCP server for storing and retrieving project-specific context for LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Eric Austin", email = "e@plsr.io"}
]
keywords = ["mcp", "memory", "context", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
local-project-memory = "local_project_memory.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/local_project_memory"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
venvPath = "~/.pyenv/versions/"
venv = "mcp-local-project-memo"
pythonVersion = "3.11"
strictGenericNarrowing = false
typeCheckingMode = "basic"

